better fix for commentary paragraph spacing

--- a/docs/less/content.less
+++ b/docs/less/content.less
@@ -514,11 +514,11 @@ h3 .section-anchor::before {
       }
     }
 
-    p:first-of-type {
+    .literate-clause:first-child p {
       margin-top: 0;
     }
 
-    p:last-of-type {
+    .literate-clause:last-child p {
       margin-bottom: 0;
     }
   }
